# BrainSeg

./: CreateModel.ipynb  DataGeneratorSetup.ipynb  GenerateDataset.ipynb  GenerateMaskStain_v2.ipynb  ModelSetup.ipynb  PreproSvg.ipynb  README.md  SetupRegistrationSvg.ipynb  SetupSiameseNetwork.ipynb  TrainForeground_v2.ipynb  TrainOnTinyCurated.ipynb  Train_x8_224.ipynb  Train_x8_224_multires_multi.ipynb  Train_x8_576_deepunet.ipynb  apply.py  apply_qupath_version2.py  apply_qupath_version3.py  apply_v2.py  apply_v4.py  convert_geojson_png.py  convert_png_svg.py  convert_png_svg_qupath_version3.py  full_prepro_svg.py  generate_dataset.py  generate_dataset_v2.py  generate_dataset_v3.py  install.sh  main_streamlit.py  main_streamlit_v3.py  prepro_svg.py  process_svg_for_registration.py  pyproject.toml  register_fluo_cv_qupath_version1.py  register_fluo_cv_qupath_version2.py  register_plotfast_cv_qupath_v3.py  register_plotfast_cv_qupath_version2.py  run.sh  scale_geojson.py  script_angle_selection.py  script_angle_selection_v2.py  (+33 more)
brainseg/: bires_unet.py  config.py  generator.py  geo.py  image.py  image_provider.py  loader.py  math.py  parser.py  path.py  polygon.py  provider.py  registration.py  slide_provider.py  slide_provider_top_left.py  utils.py
brainseg/handlers/: old.py  siamese_histo_mri.py
old/: ModelSetup.ipynb  SetupAEC.ipynb  SetupSiameseNetwork.ipynb  Train_x8_224.ipynb  Train_x8_224_bires.ipynb  apply.py  apply_qupath_version1.py  apply_v3.py  convert_png_svg_qupath_version1.py  convert_png_svg_qupath_version2.py  generate_dataset.py  generate_dataset_v2.py  generate_dataset_v3.py  register_plotfast_cv_qupath_version1.py  script_angle_selection.py  script_create_transforms.py  script_create_transforms_v3.py  script_forward_histo_mri.py  script_train_trires_qupath_version.py  script_train_trires_qupath_version2.py
scripts/: process_svg_for_registration.py  train_model.py
(+26 files in other folders)
